[gd_scene load_steps=4 format=3 uid="uid://83mtaqhfgb17"]

[ext_resource type="Texture2D" uid="uid://cefiy4q2uc2xf" path="res://UI/healthbar/tile_0044.png" id="1_jufex"]
[ext_resource type="Script" path="res://UI/healthbar/health_bar.gd" id="1_xjky4"]
[ext_resource type="Texture2D" uid="uid://bcp2mqkg5r7py" path="res://UI/healthbar/tile_0046.png" id="3_lyk8u"]

[node name="HealthBar" type="Node2D"]
script = ExtResource("1_xjky4")
heart1 = ExtResource("1_jufex")
heart0 = ExtResource("3_lyk8u")

[node name="heart1" type="Sprite2D" parent="."]
position = Vector2(7, 6)
texture = ExtResource("1_jufex")

[node name="heart2" type="Sprite2D" parent="."]
position = Vector2(23, 6)
texture = ExtResource("1_jufex")

[node name="heart3" type="Sprite2D" parent="."]
position = Vector2(39, 6)
texture = ExtResource("1_jufex")
